--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -321,10 +321,49 @@
 	.k-list-scroller { //박스
 		height: 190px;
 		padding: 10px;
-		background-color: #f5f5f5;
-		border: 1px solid #ccc;
+		border: 1px solid $gray-c;
 		overflow: auto;
 		align-self: flex-end;
+		.k-item {
+			cursor: pointer;
+			.title {
+				@include font-size-sm;
+				color: $gray-2;
+				font-weight: 400;
+			}
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 36px;
+		}
+		.list-box {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			width: 100%;
+			height: 100%;
+		}
+	}
+	+ .k-listbox .k-list-scroller {
+		background: $gray-f5;
+		border-left: 0;
+		.k-item {
+			.title {
+				@include font-size-sm;
+				color: $main;
+				font-weight: 400;
+			}
+			height: 32px;
+			background: $white;
+			border: 1px solid $gray-e4;
+			border-radius: 3px;
+			+ .k-item {
+				margin-top: 4px;
+			}
+		}
+	}
+	.k-listbox-toolbar {
+		display: none;
 	}
 	.k-listbox-toolbar ul {
 		display: flex;
@@ -352,8 +391,7 @@
 		width: 100%;
 		padding: 0 10px;
 		&:hover,
-		&.k-state-focused,
-		&.k-state-selected {
+		&.k-state-focused {
 			background-color: $gray-ef;
 		}
 	}
