--- a/resources/css/scss/modules/_icon.scss
+++ b/resources/css/scss/modules/_icon.scss
@@ -51,6 +51,9 @@ th .required {
         @include iconSvg($width: 28px, $height: 28px, $name: 'btn_filter_default', $size: 8px 15px );
         margin-right: -10px;
     }
+    &.close { //이미지 요청
+        @include iconSvg($width: 26px, $height: 26px, $name: 'btn_X', $size: 12px 12px );
+    }
     //xs 15*15
     &.up {
         @include iconSvg($width: 15px, $height: 15px, $name: 'icon_arrow_up', $size: contain );
@@ -74,6 +77,12 @@ th .required {
         @include iconSvg($width: 15px, $height: 15px, $name: 'icon_plus', $size: contain );
     }
     //xsm 16*16
+    &.prev {
+        @include iconSvg($width: 28px, $height: 28px, $name: 'icon_arrow_left', $size: 16px 16px );
+    }
+    &.next {
+        @include iconSvg($width: 28px, $height: 28px, $name: 'icon_arrow_right', $size: 16px 16px );
+    }
     &.mail {
         @include iconSvg($width: 16px, $height: 16px, $name: 'icon_mystorage', $size: contain );
     }
@@ -177,14 +186,24 @@ th .required {
     &.k-state-focused, 
     &.k-state-active {
         color: $main;
-        &.is-important {
-            color: $error;
-            .k-i-input-check {
-                background-image: url($imgPathIcon+'/icon_check_active.svg');
-            }
-        }
         .k-i-input-check {
             background-image: url($imgPathIcon+'/icon_check_blue.svg');
+        }
+    }
+    &.is-checked {
+        color: $main;
+        &.k-state-focused, 
+        &.k-state-active { color: $main; }
+        .k-i-input-check {
+            background-image: url($imgPathIcon+'/icon_check_blue.svg');
+        }
+    }
+    &.is-important {
+        color: $error;
+        &.k-state-focused, 
+        &.k-state-active { color: $error; }
+        .k-i-input-check {
+            background-image: url($imgPathIcon+'/icon_check_active.svg');
         }
     }
 }
@@ -195,6 +214,9 @@ th .required {
     &filter {
         @include iconSvg($width: 28px, $height: 28px, $name: 'btn_filter_default', $size: 8px 15px );
         margin-right: -10px;
+    }
+    &close { //이미지 요청
+        @include iconSvg($width: 12px, $height: 12px, $name: 'btn_X', $size: 12px 12px );
     }
     //xs 15*15
     &up {
