--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -322,6 +322,7 @@
 		height: 190px;
 		padding: 10px;
 		border: 1px solid $gray-c;
+		border-top: 1px solid $gray-2;
 		overflow: auto;
 		align-self: flex-end;
 		.k-item {
