--- a/resources/css/scss/modules/_checkbox_bc.scss
+++ b/resources/css/scss/modules/_checkbox_bc.scss
@@ -33,7 +33,12 @@
 * 
 * ------------------------------
 */
-
+.check-group {
+    .h-checkbox + .h-checkbox,
+    .h-checkbox + .form-set {
+        margin-left: 12px;
+    }
+} 
 .h-checkbox {
     input[type="radio"] + label  span,
     input[type="checkbox"] + label span {
